calico_versioned_docs/version-3.30/reference/resources/ippool.mdx
---
description: API for this Calico resource.
---

# IP pool

import Selectors from '@site/calico_versioned_docs/version-3.30/_includes/content/_selectors.mdx';

An IP pool resource (`IPPool`) represents a collection of IP addresses from which $[prodname] expects
endpoint IPs to be assigned.

## Sample YAML

```yaml
apiVersion: projectcalico.org/v3
kind: IPPool
metadata:
  name: my.ippool-1
spec:
  cidr: 10.1.0.0/16
  ipipMode: CrossSubnet
  natOutgoing: true
  disabled: false
  nodeSelector: all()
  allowedUses:
    - Workload
    - Tunnel
  assignmentMode: Automatic
```

## IP pool definition

### Metadata

| Field | Description                                 | Accepted Values                                     | Schema |
| ----- | ------------------------------------------- | --------------------------------------------------- | ------ |
| name  | The name of this IPPool resource. Required. | Alphanumeric string with optional `.`, `_`, or `-`. | string |

### Spec

| Field                              | Description                                                                                                                                                                         | Accepted Values                                                                                                                                                                                                        | Schema                     | Default                                       |
| ---------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------- | --------------------------------------------- |
| cidr                               | IP range to use for this pool.                                                                                                                                                      | A valid IPv4 or IPv6 CIDR. Subnet length must be at least big enough to fit a single block (by default `/26` for IPv4 or `/122` for IPv6). Must not overlap with the Link Local range `169.254.0.0/16` or `fe80::/10`. | string                     |                                               |
| blockSize                          | The CIDR size of allocation blocks used by this pool. Blocks are allocated on demand to hosts and are used to aggregate routes. The value can only be set when the pool is created. | 20 to 32 (inclusive) for IPv4 and 116 to 128 (inclusive) for IPv6                                                                                                                                                      | int                        | `26` for IPv4 pools and `122` for IPv6 pools. |
| ipipMode                           | The mode defining when IPIP will be used. Cannot be set at the same time as `vxlanMode`.                                                                                            | Always, CrossSubnet, Never                                                                                                                                                                                             | string                     | `Never`                                       |
| vxlanMode                          | The mode defining when VXLAN will be used. Cannot be set at the same time as `ipipMode`.                                                                                            | Always, CrossSubnet, Never                                                                                                                                                                                             | string                     | `Never`                                       |
| natOutgoing                        | When enabled, packets sent from $[prodname] networked containers in this pool to destinations outside of any Calico IP pools will be masqueraded.                                   | true, false                                                                                                                                                                                                            | boolean                    | `false`                                       |
| disabled                           | When set to true, $[prodname] IPAM will not assign addresses from this pool.                                                                                                        | true, false                                                                                                                                                                                                            | boolean                    | `false`                                       |
| disableBGPExport _(since v3.21.0)_ | Disable exporting routes from this IP Pool’s CIDR over BGP.                                                                                                                         | true, false                                                                                                                                                                                                            | boolean                    | `false`                                       |
| nodeSelector                       | Selects the nodes that $[prodname] IPAM should assign addresses from this pool to.                                                                                                  |                                                                                                                                                                                                                        | [selector](#node-selector)            | all()                                         |
| allowedUses _(since v3.21.0)_      | Controls whether the pool will be used for automatic assignments of certain types. See [below](#allowed-uses).                                                                                | Workload, Tunnel, LoadBalancer                                                                                                                                                                                         | list of strings            | `["Workload", "Tunnel"]`                      |
| assignmentMode                     | Controls whether the pool will be used for automatic assignments or only if requested manually                                                                                      | Automatic, Manual                                                                                                                                                                                                      | strings                    | `Automatic`                                   |

:::note

Do not use a custom `blockSize` until **all** $[prodname] components have been updated to a version that
supports it (at least v3.3.0). Older versions of components do not understand the field so they may corrupt the
IP pool by creating blocks of incorrect size.

:::

### Allowed uses

When automatically assigning IP addresses to workloads, only pools with "Workload" in their `allowedUses` field are
consulted. Similarly, when assigning IPs for tunnel devices, only "Tunnel" pools are eligible.

Combining options for the `allowedUses` field is limited. You can specify only the following options and option combinations:
    * `allowedUses: ["Tunnel","Workload"]` (default)
    * `allowedUses: ["Tunnel"]`
    * `allowedUses: ["Workload"]`
    * `allowedUses: ["LoadBalancer"]`

If the `allowedUses` field is not specified, it defaults to `["Workload", "Tunnel"]` for compatibility with older
versions of Calico. It is not possible to specify a pool with no allowed uses.

The `allowedUses` field is only consulted for new allocations, changing the field has no effect on previously allocated
addresses.

$[prodname] supports Kubernetes [annotations that force the use of specific IP addresses](../configure-cni-plugins.mdx#requesting-a-specific-ip-address). These annotations take precedence over the `allowedUses` field.

### IPIP

Routing of packets using IP-in-IP will be used when the destination IP address
is in an IP Pool that has IPIP enabled. In addition, if the `ipipMode` is set to `CrossSubnet`,
$[prodname] will only route using IP-in-IP if the IP address of the destination node is in a different
subnet. The subnet of each node is configured on the node resource (which may be automatically
determined when running the `$[nodecontainer]` service).

For details on configuring IP-in-IP on your deployment, please refer to
[Configuring IP-in-IP](../../networking/configuring/vxlan-ipip.mdx).

:::note

Setting `natOutgoing` is recommended on any IP Pool with `ipip` enabled.
When `ipip` is enabled without `natOutgoing` routing between Workloads and
Hosts running $[prodname] is asymmetric and may cause traffic to be filtered due to
[RPF](https://en.wikipedia.org/wiki/Reverse_path_forwarding) checks failing.

:::

### VXLAN

Routing of packets using VXLAN will be used when the destination IP address
is in an IP Pool that has VXLAN enabled. In addition, if the `vxlanMode` is set to `CrossSubnet`,
$[prodname] will only route using VXLAN if the IP address of the destination node is in a different
subnet. The subnet of each node is configured on the node resource (which may be automatically
determined when running the `$[nodecontainer]` service).

:::note

Setting `natOutgoing` is recommended on any IP Pool with `vxlan` enabled.
When `vxlan` is enabled without `natOutgoing` routing between Workloads and
Hosts running $[prodname] is asymmetric and may cause traffic to be filtered due to
[RPF](https://en.wikipedia.org/wiki/Reverse_path_forwarding) checks failing.

:::

### Block sizes

The default block sizes of `26` for IPv4 and `122` for IPv6 provide blocks of 64 addresses. This allows addresses to be allocated in groups to workloads running on the same host. By grouping addresses, fewer routes need to be exchanged between hosts and to other BGP peers. If a host allocates all of the addresses in a block then it will be allocated an additional block. If there are no more blocks available then the host can take addresses from blocks allocated to other hosts. Specific routes are added for the borrowed addresses which has an impact on route table size.

Increasing the block size from the default (e.g., using `24` for IPv4 to give 256 addresses per block) means fewer blocks per host, and potentially fewer routes. But try to ensure that there are at least as many blocks in the pool as there are hosts.

Reducing the block size from the default (e.g., using `28` for IPv4 to give 16 addresses per block) means more blocks per host and therefore potentially more routes. This can be beneficial if it allows the blocks to be more fairly distributed amongst the hosts.

### Assignment Mode

Determines if the IP pool should be used by Calico IPAM for automatic IP assignments. With `Automatic` assignmentMode, Calico IPAM automatically assigns IP addresses from this pool. If you set `assignmentMode` to `Manual`, Calico IPAM does not assign IP addresses from this pool unless the user specifies this pool.

### Node Selector

For details on configuring IP pool node selectors, please read the
[Assign IP addresses based on topology guide.](../../networking/ipam/assign-ip-addresses-topology.mdx).

#### Selector reference

<Selectors />

## See also

The [`IPReservation` resource](ipreservation.mdx) allows for small parts of an IP pool to be reserved so that they will
not be used for automatic IPAM assignments.
